# helios-agent

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  close-duplicates.sh  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: speckit.fixit.run.agent.md  speckit.qa.run.agent.md  speckit.taskstoissues.agent.md  speckit.v-model.acceptance.agent.md  speckit.v-model.architecture-design.agent.md  speckit.v-model.integration-test.agent.md  speckit.v-model.module-design.agent.md  speckit.v-model.requirements.agent.md  speckit.v-model.system-design.agent.md  speckit.v-model.system-test.agent.md  speckit.v-model.trace.agent.md  speckit.v-model.unit-test.agent.md
.github/prompts/: speckit.fixit.run.prompt.md  speckit.qa.run.prompt.md
.specify/: extensions.yml
.specify/extensions/: .registry
.specify/extensions/v-model/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  catalog-entry.json  extension.yml  pyproject.toml
.specify/extensions/verify/: verify-config.yml
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
config/: mcp_servers.yaml
specs/001-mcp-langgraph-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-langgraph-agent/checklists/: requirements.md
specs/001-mcp-langgraph-agent/contracts/: api.md
src/mcp_agent/: llm.py  main.py  settings.py  types.py
src/mcp_agent/agent/: edges.py  graph.py  nodes.py  state.py
src/mcp_agent/api/: handlers.py  models.py  router.py
(+50 files in other folders)
