[project]
name = "helios-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.27.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "fastmcp>=3.2.0",
    "gradio>=6.11.0",
    "httpx>=0.28.1",
    "langchain>=0.3.28",
    "langchain-mcp>=0.2.1",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=5.3.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.43.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
